--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2139,12 +2139,42 @@ button[type=submit]:hover {
 }
 
 #map {
-  height: 350px;
+  height: 430px;
   margin-top: 2rem;
+}
+
+.contact_title {
+  margin-top: 4rem;
 }
 
 .cases {
   margin-top: 4rem;
+}
+.cases__client {
+  font-size: 1.2rem;
+}
+.cases__client__review {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-image: url(https://images.unsplash.com/photo-1600096194534-95cf5ece04cf?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bGlrZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.cases__client__review h6 {
+  margin-top: 0.5rem;
+}
+.cases__client__about {
+  border: 1px solid black;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .cases__text {
   display: flex;
@@ -2192,7 +2222,7 @@ button[type=submit]:hover {
   display: none;
   position: absolute;
   background-color: #7E57C5;
-  width: 10rem;
+  width: 8rem;
   max-height: 15rem;
   overflow-x: hidden;
   overflow-y: auto;
@@ -2208,11 +2238,11 @@ button[type=submit]:hover {
   font-size: 0.8rem;
 }
 .dropdown__links__item:hover {
-  background-color: #F58732;
+  background-color: white;
   text-decoration: none;
 }
 .dropdown__btn {
-  width: 10rem !important;
+  width: 8rem !important;
   height: 2.85rem !important;
   outline: none;
   border: none;
@@ -2227,5 +2257,5 @@ button[type=submit]:hover {
 .dropdown {
   position: absolute;
   top: 4.2rem;
-  right: 0;
+  right: 1rem;
 }
